Minor adjustments + added favicon and screenshot

--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Terminal?</title>
-  <!-- <script
-			  src="https://code.jquery.com/jquery-3.6.0.min.js"
-			  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-			  crossorigin="anonymous"></script> -->
   <script src="jquery.min.js"></script>
   <script src="console.js"></script>
-  <link href='style.css' rel='stylesheet' type='text/css'>
+  <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
   <div class="container output">
-    <p id="echo">Time to go...</p>
+    <p id="echo">Want to play?</p>
     <p>
       <span class="prefix"></span>
-      <span class="cursor-container"><span class="pad"></span>
-        <cursor>&nbsp;<cursor></span>
+      <span class="cursor-container">
+		<span class="pad"></span>
+        <cursor>&nbsp;<cursor>
+	  </span>
       <span class="input">
         <span id="buffer"></span>
       </span>
