--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,12 +12,12 @@
 <body>
 
   <div class="container output">
-    <p id="echo">Want to play?</p>
+    <p id="echo">Want to play a game?</p>
     <p>
       <span class="prefix"></span>
       <span class="cursor-container">
 		<span class="pad"></span>
-        <cursor>&nbsp;<cursor>
+        <cursor>&nbsp;</cursor>
 	  </span>
       <span class="input">
         <span id="buffer"></span>
