implement tower of hanoi

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Terminal?</title>
   <script src="jquery.min.js"></script>
+  <script src="games.js"></script>
   <script src="console.js"></script>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -12,13 +13,13 @@
 <body>
 
   <div class="container output">
-    <p id="echo">Want to play a game?</p>
+    <p id="echo">Hello.</p>
     <p>
       <span class="prefix"></span>
       <span class="cursor-container">
-		<span class="pad"></span>
+      <span class="pad"></span>
         <cursor>&nbsp;</cursor>
-	  </span>
+      </span>
       <span class="input">
         <span id="buffer"></span>
       </span>
